Added new techs - Synthetic Rubber and Common Synthetic Polymers.
[b]-Oil Refining:[/b]
Added new building - Oil Refinery, which is unlocked by a new tech.
It consumes oil and produces 2 new goods: Refined Fuel and Plastics.
Refined Fuel will be consumed by most PMs that earlier used oil, Plastics will be widely used in late-game production.

[b]Tweaks[/b]
-Good shortage penalties disappear quicker when raw goods are received.
-Reduced trade route bureaucracy cost.
-Price range is now up to 95% of base price, instead of 75%.
-Increadsed automation throughput bonuses.
-Railroad automation PMs now give transportation output modifier and infrastructure buff, instead of throughput.
-Paper Mills and Power Plants automation PMs now give output modifiers, instead of throughput.
-Added max weekly construction progress to several techs. Total combined modifier is +30.
-Rebalanced Livestock Ranches.

[b]Fixes and smaller changes[/b]
-All state trait hardwood output modifiers changed to logging throughput (not useless anymore).
-Passenger carriages require a bit less goods.
-A little bit enhanced autonomous investment logic.
-A little bit enhanced trade logic and AI.
-Reworked Natural Dye PM icon.
-Reworked Railway and Power Plants auto-expansion rules.

[h1]v9.2.4[/h1]
-Fixed missing city meshes.

[h1]v9.2.3[/h1]
-National Guard institution now increases Armed Forces pop attraction.
-Secret Police institution now increases Petite Bourgeoisie and Armed Forces pop attraction.
-Finished the Child Care decree.
-Forestries are moved to improved fertilizer tech.
-Forestries can't be built if Logging Camps can be expanded in a state. Building cost is increased (600 >> 800).
-Fixed missing russian loc.

[h1]v9.2.2[/h1]
-Can't build Machine Parts Factory with Industry Banned law.
-Fix Diesel Pump PM for Copper Mines didn't have increased output compared to Condensing Engine Pump.


[h1]v9.2[/h1]
-Removed Copper from Chad.
-Added Copper to Niger.