@@ -29,17 +29,18 @@ pm_plastic_telephones = {
 	building_modifiers = {
 		workforce_scaled = {
 			goods_input_copper_add = 20		# 600
-			goods_input_rubber_add = 20		# 800
-			goods_input_lead_add = 20		# 800
-			goods_input_tools_add = 10		# 400	# 2600
+			goods_input_rubber_add = 10		# 400
+			goods_input_plastics_add = 20	# 1000
+			goods_input_lead_add = 10		# 400
+			goods_input_tools_add = 15		# 600	# 3000
 			
-			goods_output_telephones_add = 55		# 3850	# PROFIT 1250
+			goods_output_telephones_add = 70		# 4900	# PROFIT 1900
 		}
 
 		level_scaled = {
 			building_employment_laborers_add = 1500
-			building_employment_machinists_add = 2000
-			building_employment_engineers_add = 1000
+			building_employment_machinists_add = 1500
+			building_employment_engineers_add = 1500
 		}
 	}
 }
