@@ -1,0 +1,192 @@
+﻿
+pm_forest_glass = {
+	texture = "gfx/interface/icons/production_method_icons/forest_glass.dds"
+	
+	building_modifiers = {
+		workforce_scaled = {
+			# input goods
+			goods_input_wood_add = 30		# 600
+			
+			# output goods
+			goods_output_glass_add = 30		# 1200	# PROFIT 600
+		}
+
+		level_scaled = {
+			building_employment_laborers_add = 4500
+		}
+	}
+}		
+
+pm_leaded_glass = {
+	texture = "gfx/interface/icons/production_method_icons/leaded_glass.dds"
+	
+	unlocking_technologies = { 
+		lathe 
+	}
+	
+	state_modifiers = {
+		workforce_scaled = {
+			state_pollution_generation_add = 5
+		}
+	}
+
+	building_modifiers = {
+		workforce_scaled = {
+			# input goods
+			goods_input_wood_add = 20		# 400
+			goods_input_lead_add = 10		# 400	# TOTAL 800
+			
+			# output goods
+			goods_output_glass_add = 40		# 1600	# PROFIT 800
+		}
+
+		level_scaled = {
+			building_employment_laborers_add = 4000
+			building_employment_machinists_add = 500
+		}
+	}
+}
+
+pm_crystal_glass = {
+	texture = "gfx/interface/icons/production_method_icons/crystal_glass.dds"
+	
+	unlocking_technologies = {
+		crystal_glass
+	}
+	
+	state_modifiers = {
+		workforce_scaled = {
+			state_pollution_generation_add = 10
+		}
+	}
+
+	building_modifiers = {
+		workforce_scaled = {
+			# input goods
+			goods_input_lead_add = 35		# 1400
+			
+			# output goods
+			goods_output_glass_add = 70		# 2800	# PROFIT 1400
+		}
+
+		level_scaled = {
+			building_employment_laborers_add = 3000
+			building_employment_machinists_add = 1000
+			building_employment_engineers_add = 500
+		}
+	}
+}
+
+pm_houseware_plastics = {
+	texture = "gfx/interface/icons/production_method_icons/houseware_plastics.dds"
+	
+	unlocking_technologies = {
+		plastics
+	}
+	
+	state_modifiers = {
+		workforce_scaled = {
+			state_pollution_generation_add = 15
+		}
+	}
+
+	building_modifiers = {
+		workforce_scaled = {
+			# input goods
+			goods_input_plastics_add = 20	# 1000
+			goods_input_lead_add = 35		# 1400	# TOTAL 2400
+			
+			# output goods
+			goods_output_glass_add = 105	# 4200	# PROFIT 1800
+		}
+
+		level_scaled = {
+			building_employment_laborers_add = 2500
+			building_employment_machinists_add = 1250
+			building_employment_engineers_add = 750
+		}
+	}
+}
+
+pm_disabled_ceramics = {
+	texture = "gfx/interface/icons/production_method_icons/no_ceramics.dds"
+}
+
+pm_ceramics = {
+	texture = "gfx/interface/icons/production_method_icons/ceramics.dds"
+	
+	building_modifiers = {
+		workforce_scaled = {
+			goods_input_dye_add = 5			# 200
+			goods_output_glass_add = -25	# 1000	# TOTAL 1200
+
+			goods_output_porcelain_add = 20	# 1400	# PROFIT 200
+		}		
+		
+		level_scaled = {
+			building_employment_shopkeepers_add = 500
+		}			
+	}
+}
+
+pm_bone_china = {
+	texture = "gfx/interface/icons/production_method_icons/bone_china.dds"
+	
+	unlocking_technologies = {
+		chemical_bleaching
+	}
+
+	unlocking_production_methods = {
+		pm_crystal_glass
+		pm_houseware_plastics
+	}
+	
+	building_modifiers = {
+		workforce_scaled = {
+			# input goods
+			goods_input_dye_add = 15		# 600
+			goods_output_glass_add = -60	# 2400	# 3000
+			
+			# output goods
+			goods_output_porcelain_add = 50	# 3500	# PROFIT 500
+		}
+		
+		level_scaled = {
+			building_employment_shopkeepers_add = 1000
+		}					
+	}														
+}
+
+pm_manual_glassblowing = {
+	texture = "gfx/interface/icons/production_method_icons/glassworks_handicraft.dds"
+}
+
+pm_automatic_bottle_blowers = {
+	texture = "gfx/interface/icons/production_method_icons/automated_bottle_blowers.dds"
+	
+	unlocking_technologies = {
+		automatic_bottle_blowers
+	}
+
+	disallowing_laws = {
+		law_industry_banned
+	}
+
+	state_modifiers = {
+		workforce_scaled = {
+			state_pollution_generation_add = 5
+		}
+	}
+	
+	building_modifiers = {
+		workforce_scaled = {
+			# input goods
+			goods_input_tools_add = 5	# 200
+			goods_input_fuel_add = 8	# 400	# TOTAL 600
+		}
+
+		level_scaled = {
+			building_employment_laborers_add = -2500
+		}
+	}
+}
