@@ -1,4 +1,22 @@
 ﻿
+pm_crude_tools = {
+	texture = "gfx/interface/icons/production_method_icons/crude_tools.dds"
+	
+	building_modifiers = {
+		workforce_scaled = {
+			# input goods
+			goods_input_wood_add = 30
+			
+			# output goods
+			goods_output_tools_add = 30
+		}
+
+		level_scaled = {
+			building_employment_laborers_add = 4500
+		}
+	}
+}
+
 pm_bronze_tools = {
 	texture = "gfx/interface/icons/production_method_icons/pig_iron_tools.dds"
 	
@@ -20,6 +38,99 @@ pm_bronze_tools = {
 		level_scaled = {
 			building_employment_laborers_add = 4000
 			building_employment_machinists_add = 500
+		}
+	}
+}
+
+pm_pig_iron = {
+	texture = "gfx/interface/icons/production_method_icons/pig_iron_tools.dds"
+	
+	unlocking_technologies = {
+		steelworking
+	}	
+	
+	building_modifiers = {
+		workforce_scaled = {
+			# input goods
+			goods_input_wood_add = 30
+			goods_input_iron_add = 20
+			
+			# output goods
+			goods_output_tools_add = 60
+		}
+
+		level_scaled = {
+			building_employment_laborers_add = 4000
+			building_employment_machinists_add = 500
+		}
+	}
+}
+
+pm_steel = {
+	texture = "gfx/interface/icons/production_method_icons/bessemer_process.dds"
+	unlocking_technologies = {
+		mechanical_tools
+	}
+	building_modifiers = {
+		workforce_scaled = {
+			# input goods
+			goods_input_wood_add = 30		# 600
+			goods_input_steel_add = 20		# 1000	# TOTAL 1600
+			
+			# output goods
+			goods_output_tools_add = 80		# 3200	# PROFIT 1600
+		}
+
+		level_scaled = {
+			building_employment_laborers_add = 3500
+			building_employment_machinists_add = 500
+			building_employment_engineers_add = 500
+		}
+	}
+}
+
+pm_rubber_grips = {
+	texture = "gfx/interface/icons/production_method_icons/mechanized_workshops.dds"
+	unlocking_technologies = {
+		vulcanization
+	}
+	building_modifiers = {
+		workforce_scaled = {
+			# input goods
+			goods_input_rubber_add = 20		# 800
+			goods_input_steel_add = 30		# 1500	# TOTAL 2300
+			
+			# output goods
+			goods_output_tools_add = 110	# 4400	# PROFIT 2100
+		}
+
+		level_scaled = {
+			building_employment_laborers_add = 3000
+			building_employment_machinists_add = 1000
+			building_employment_engineers_add = 500
+		}
+	}
+}
+
+pm_plastic_machined_tools = {
+	texture = "gfx/interface/icons/production_method_icons/machined_plastic_tools.dds"
+	unlocking_technologies = {
+		plastics
+	}
+	building_modifiers = {
+		workforce_scaled = {
+			# input goods
+			goods_input_plastics_add = 20	# 1000
+			goods_input_steel_add = 30		# 1500	# TOTAL 2500
+			
+			# output goods
+			goods_output_tools_add = 120	# 4800	# PROFIT 2300
+		}
+
+		level_scaled = {
+			building_employment_laborers_add = 3000
+			building_employment_machinists_add = 1000
+			building_employment_engineers_add = 500
 		}
 	}
 }
