@@ -428,3 +428,10 @@
  
  refining:0 "Обработка нефти"
  refining_desc:0 "Процессы переработки нефти превращают сырую нефть в готовую продукцию, включая горюче-смазочные материалы для автомобильных, судовых и авиационных двигателей."
+ 
+ pm_oil_distillation:0 "Дистилляция"
+ pm_thermal_cracking:0 "Высокотемпературная обработка"
+  pm_no_plastics:0 "Нет производства пластмасс"
+  pm_plastics_production:0 "Ограниченное производство пластмасс"
+  pm_extensive_plastic_production:0 "Расширенное производство пластмасс"
+  pm_plastic_focus:0 "Упор на производство пластмасс"
